grafana/overlays/nerc-ocp-obs/grafanas/grafana-image-renderer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-image-renderer
  namespace: grafana
  labels:
    app: grafana-image-renderer
spec:
  ports:
    - port: 8081
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: grafana-image-renderer
  type: ClusterIP
