grafana/overlays/nerc-ocp-obs/grafanas/grafana-image-renderer-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-image-renderer
  namespace: grafana
spec:
  podSelector:
    matchLabels:
      app: grafana-image-renderer
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: grafana
      ports:
        - protocol: TCP
          port: 8081
